--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,4 +1,4 @@
-.heading {
+/* .heading {
     
     text-align: center;
     text-transform: capitalize;
@@ -17,4 +17,4 @@
     height:300px;
     cursor: pointer;
 }
-
+ */
