--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,26 +1,26 @@
 #header {
-    width:100%;
-    height:80vh;
+    width: 100%;
+    height: 80vh;
     margin-top: 70px;
-}
-
-#header h1 {
+  }
+  
+  #header h1 {
     margin: 0 0 10px 0;
     font-size: 48px;
     font-weight: 700;
-    color:black;
-}
-
-#header .brand-name{
-    color:blue;
-}
-
-#header h2{
-    color:black;
+    color: black;
+  }
+  
+  #header .brand-name {
+    color: #3498db;
+  }
+  
+  #header h2 {
+    color: #484848;
     font-size: 24px;
-}
-
-#header .btn-get-started {
+  }
+  
+  #header .btn-get-started {
     font-weight: 500;
     font-size: 16px;
     letter-spacing: 1px;
@@ -28,29 +28,26 @@
     padding: 10px 30px;
     border-radius: 50px;
     transition: 0.5s;
-    color:blueviolet;
+    color: #3498db;
     border: 2px solid #3498db;
     text-decoration: none;
-}
-
-#header .btn-get-started:hover {
+  }
+  
+  #header .btn-get-started:hover {
     background: #3498db;
     color: #fff;
-}
-
-#header .animated{
+  }
+  
+  #header .animated {
     animation: up-down 2s ease-in-out infinite alternate-reverse both;
-}
-    
-@keyframes  up-down {
-    0%  {
-        transform: translateY(10px);
+  }
+  
+  @keyframes up-down {
+    0% {
+      transform: translateY(10px);
     }
-
     100% {
-        transform:translateY(-10px);
+      transform: translateY(-10px);
     }
-}
-
-
-
+  }
+  
