--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.myLogout{
+  outline: none;
+  background: blue;
+  padding: 5px 15px;
+  color: #fff !important;
+  font-weight: 600;
+  font-size: 15px;
+  border-radius: 4px;
+  text-decoration: none;
+  border: 1px solid blue;
+}
